fix(styles): Added missing `z-index` in buttons to override progress bar index in IE11

--- a/src/css/player.css
+++ b/src/css/player.css
@@ -109,6 +109,7 @@
 }
 .om-controls > button {
     padding: 2px 6px 3px;
+    z-index: 4;
 }
 .om-player__loader {
     display: block;
